--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://skynetclock.github.io/skynetclock",
-  "name": "skynetclock",
+  "homepage": "https://lluisagusti.github.io/shitty-weather",
+  "name": "shittyweather",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
