--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "shitty-weather",
-  "name": "Shitty Weather",
+  "name": "shitty-weather",
   "icons": [
     {
       "src": "favicon.ico",
