--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lluisagusti.github.io/shitty-weather",
+  "homepage": "https://lluisagusti.github.io/shitty-weather/",
   "name": "shitty-weather",
   "version": "0.1.0",
   "private": true,
